<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="647dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="650dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/addImage"
                    android:layout_width="match_parent"
                    android:layout_height="126dp"
                    android:src="@drawable/ic_baseline_add_a_photo_24"
                    app:layout_constraintBottom_toTopOf="@+id/sneakersName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/sneakersBrand"
                    android:layout_width="330dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rounded_bordered_edittext_background"
                    android:ems="10"
                    android:hint="@string/sneakerBrand"
                    android:paddingStart="15dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sneakersGender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.91" />

                <EditText
                    android:id="@+id/sneakersName"
                    android:layout_width="330dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_bordered_edittext_background"
                    android:ems="10"
                    android:hint="@string/sneakerName"
                    android:paddingStart="15dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sneakersBrand"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.878" />

                <EditText
                    android:id="@+id/sneakersPrice"
                    android:layout_width="330dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_bordered_edittext_background"
                    android:ems="10"
                    android:hint="@string/sneakerPrice"
                    android:paddingStart="15dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sneakersSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.948" />


                <EditText
                    android:id="@+id/sneakersSize"
                    android:layout_width="330dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_bordered_edittext_background"
                    android:ems="10"
                    android:hint="@string/sneakerSize"
                    android:paddingStart="15dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sneakersDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.953" />

                <EditText
                    android:id="@+id/sneakersGender"
                    android:layout_width="330dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_bordered_edittext_background"
                    android:ems="10"
                    android:hint="@string/sneakerGender"
                    android:paddingStart="15dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sneakersPrice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.936" />


                <EditText
                    android:id="@+id/sneakersQuantity"
                    android:layout_width="330dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_bordered_edittext_background"
                    android:ems="10"
                    android:hint="@string/sneakerQuantity"
                    android:paddingStart="15dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sneakersPrice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.936" />

                <EditText
                    android:id="@+id/sneakersDescription"
                    android:layout_width="330dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_bordered_edittext_background"
                    android:ems="3"
                    android:hint="@string/sneakerDescription"
                    android:paddingStart="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.457"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.755" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/black"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    app:cornerRadius="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.063"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.890"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/btnCancel"
                    android:textColor="@color/black"
                    app:cornerRadius="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.890"
                    app:strokeColor="#B6B5B5"
                    app:strokeWidth="1dp"
                     />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>


