<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_sheet">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/transparent" />

        <TextView
            android:id="@+id/textConfirm"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/txtConfirm"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/btnYes"
            android:textColor="@color/white"
            app:cornerRadius="90dp"
            app:icon="@drawable/ic_baseline_check_24"
            app:iconGravity="textEnd"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.800"
            app:strokeColor="@color/gres"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/btnNo"
            android:textColor="@color/black"
            app:cornerRadius="90dp"
            app:icon="@drawable/ic_baseline_close_24"
            app:iconGravity="textEnd"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.800"
            app:strokeColor="#B6B5B5"
            app:strokeWidth="1dp" />
    </LinearLayout>
</layout>
