<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_login_page"
        android:layout_width="232dp"
        android:layout_height="203dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="28dp"
        android:text="Sneakers App provides Sneakers Members with the finest products, inspiration, and sports-related stories."
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/join_us_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_us_button"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/join_us"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toTopOf="@id/sign_in_google_button"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/sign_in_google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/join_us_button"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_google_button"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/sign_in_googLe"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/shoes_logo"
        app:layout_constraintBottom_toTopOf="@+id/text_login_page"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>
