<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.sneakers_shop_server.viewModel.SneakerViewModel" />
    </data>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="650dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sneakerImage"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:scaleType="centerCrop"
                    android:transitionName="sneakerImage_big"
                    app:imageUrl="@{viewModel.sneaker.image}"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/sneakerGender"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_margin="10sp"
                    android:layout_marginStart="16dp"
                    android:text="@{viewModel.sneaker.gender}"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sneakerName"
                    android:layout_width="385dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@{viewModel.sneaker.name}"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.063"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.890" />

                <TextView
                    android:id="@+id/sneakerPrice"
                    android:layout_width="385dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@{viewModel.sneaker.price.toString()+'€'}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.063"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.890" />

                <TextView
                    android:id="@+id/sneakerDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10sp"
                    android:layout_marginStart="16dp"
                    android:text="@{viewModel.sneaker.description}"
                    android:textColor="#0C0C0C"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sneakerQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10sp"
                    android:layout_marginStart="16dp"
                    android:text="@{`Stock: ` + (viewModel.sneaker.quantity != null ? viewModel.sneaker.quantity.toString() : `0`) + `u`}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAvailableSize"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/btnSelectSize"
                    android:textColor="@color/black"
                    app:cornerRadius="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.063"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.890"
                    app:strokeColor="#B6B5B5"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEdit"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/btnEdit"
                    android:textColor="@color/white"
                    app:cornerRadius="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.063"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.890"
                    app:strokeColor="@color/gres"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/btnDelete"
                    android:textColor="@color/black"
                    app:cornerRadius="90dp"
                    app:icon="@drawable/ic_baseline_delete_outline_24"
                    app:iconTint="@color/black"
                    app:iconGravity="textEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.063"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.890"
                    app:strokeColor="#B6B5B5"
                    app:strokeWidth="1dp" />

                <TextView
                    android:id="@+id/barra"
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
